plugins {
    id 'io.spring.convention.spring-module'
}

dependencies {
    management platform(project(":spring-ldap-dependencies"))
    api project(":spring-ldap-core")

    provided "com.sun:ldapbp:1.0"

    testImplementation platform('org.junit:junit-bom')
    testImplementation "org.junit.vintage:junit-vintage-engine"
    testImplementation "junit:junit"
    testImplementation "org.mockito:mockito-core"
    testImplementation "gsbase:gsbase"
    testImplementation "org.assertj:assertj-core"
}

compileTestJava {
    targetCompatibility = JavaVersion.VERSION_11
    doFirst {
        options.compilerArgs = [
                '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
        ]
    }
}

test {
    jvmArgs '--add-exports', 'java.naming/com.sun.jndi.ldap=ALL-UNNAMED'
}
